# TuitBot

./: .codecov.yml  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SKILL.md  TASKS_BACKEND.md  TASKS_DEVOPS.md  TASKS_FRONTEND.md  TASKS_QA.md  codecov.yml  config.docklet.toml  config.example.toml  docker-compose.yml  mkdocs.yml  release-plz.toml  skills-lock.json
crates/replyguy-cli/: Cargo.toml
crates/replyguy-cli/src/: main.rs
crates/replyguy-cli/src/commands/: auth.rs  init.rs  mod.rs  run.rs  test.rs
crates/replyguy-core/: Cargo.toml
crates/replyguy-core/src/: error.rs  lib.rs  startup.rs
crates/replyguy-core/src/automation/: analytics_loop.rs  content_loop.rs  mod.rs  target_loop.rs
crates/replyguy-core/src/config/: defaults.rs  mod.rs
crates/replyguy-core/src/content/: generator.rs  mod.rs
crates/replyguy-core/src/llm/: anthropic.rs  openai_compat.rs
crates/replyguy-core/src/safety/: mod.rs
crates/replyguy-core/src/scoring/: mod.rs  signals.rs
crates/replyguy-core/src/storage/: analytics.rs  mod.rs  replies.rs  tweets.rs
crates/tuitbot-cli/: Cargo.toml  config.example.toml
crates/tuitbot-cli/src/: deps.rs  main.rs  output.rs
crates/tuitbot-cli/src/commands/: accounts.rs  approve.rs  auth.rs  backup.rs  doctor.rs  init.rs  mcp.rs  mod.rs  restore.rs  run.rs  settings.rs  stats.rs  test.rs  tick.rs  uninstall.rs  update.rs  upgrade.rs
crates/tuitbot-core/: Cargo.toml
crates/tuitbot-core/benches/: content_bench.rs  core_operations.rs  scoring_bench.rs
crates/tuitbot-core/migrations/: 20260221000000_initial_schema.sql  20260222000001_safety_enhancements.sql  20260222000002_target_accounts.sql  20260222000003_analytics.sql  20260222000004_approval_queue.sql  20260222000005_cursors.sql  20260225000007_strategy_reports.sql  20260225000008_llm_usage.sql  20260226000011_composer_mode.sql  20260227000016_media_uploads.sql  20260228000018_sessions.sql  20260304000021_account_profile_fields.sql  20260308000100_draft_studio_foundation.sql  20260312000101_retry_tracking.sql  20260321000100_vault_selections.sql  20260322000100_provenance_hook_miner_fields.sql  20260322000200_chunk_embeddings.sql
crates/tuitbot-core/src/: error.rs  lib.rs  net.rs  scheduling.rs  startup.rs  x_client_transaction.rs
crates/tuitbot-core/src/auth/: error.rs  mod.rs  passphrase.rs  session.rs
crates/tuitbot-core/src/automation/: adapters.rs  analytics_loop.rs  approval_poster.rs  circuit_breaker.rs  content_loop.rs  discovery_loop.rs  loop_helpers.rs  mentions_loop.rs  mod.rs  posting_queue.rs  safety_guardrails_tests.rs  schedule.rs  scheduler.rs  seed_worker.rs  status_reporter.rs  target_loop.rs  thread_loop.rs  thread_loop.rs.bak
crates/tuitbot-core/src/config/: capability.rs  defaults.rs  enrichment.rs  env_overrides.rs  merge.rs  mod.rs  tests.rs  tests_backend.rs  types.rs  types_policy.rs  validation.rs
crates/tuitbot-core/src/content/: angles.rs  evidence.rs  frameworks.rs  generator.rs  mod.rs  thread.rs
crates/tuitbot-core/src/context/: author.rs  engagement.rs  graph_expansion.rs  hybrid_retrieval.rs  mod.rs  retrieval.rs  semantic_index.rs  semantic_search.rs  tests.rs  topics.rs  winning_dna.rs
crates/tuitbot-core/src/llm/: anthropic.rs  embedding.rs  embedding_factory.rs  factory.rs  mod.rs  ollama_embedding.rs  openai_compat.rs  openai_embedding.rs  pricing.rs
crates/tuitbot-core/src/mcp_policy/: evaluator.rs  migration.rs  mod.rs  rules.rs  templates.rs  tests.rs  types.rs
crates/tuitbot-core/src/mutation_gateway/: mod.rs  tests.rs
crates/tuitbot-core/src/safety/: dedup.rs  mod.rs  qa.rs  redact.rs
crates/tuitbot-core/src/scoring/: engine.rs  mod.rs  signals.rs  signals_tests.rs  tests.rs  weights.rs
crates/tuitbot-core/src/source/: mod.rs
crates/tuitbot-core/src/startup/: config.rs  db.rs  mod.rs  services.rs  tests.rs
crates/tuitbot-core/src/storage/: accounts.rs  action_log.rs  analytics.rs  approval_queue.rs  author_interactions.rs  backup.rs  cleanup.rs  cursors.rs  llm_usage.rs  mcp_telemetry.rs  media.rs  mod.rs  mutation_audit.rs  provenance.rs  rate_limits.rs  replies.rs  reset.rs  scheduled_content.rs  strategy.rs  target_accounts.rs  threads.rs  tweets.rs  vault_selections.rs  x_api_usage.rs
crates/tuitbot-core/src/strategy/: metrics.rs  mod.rs  recommendations.rs  report.rs
crates/tuitbot-core/src/testing/: account_factory.rs  approval_item_factory.rs  config_fixture.rs  mock_x_client.rs  mod.rs  tweet_factory.rs
crates/tuitbot-core/src/toolkit/: e2e_tests.rs  engage.rs  media.rs  mod.rs  read.rs  write.rs
crates/tuitbot-core/src/workflow/: discover.rs  draft.rs  e2e_tests.rs  mod.rs  orchestrate.rs  publish.rs  queue.rs  tests.rs  thread_plan.rs
crates/tuitbot-core/src/x_api/: auth.rs  client.rs  media.rs  mod.rs  null_client.rs  retry.rs  scopes.rs  scraper_health.rs  tier.rs  types.rs
crates/tuitbot-mcp/: Cargo.toml
crates/tuitbot-mcp/benches/: mcp_server.rs
crates/tuitbot-mcp/src/: lib.rs  requests.rs  server.rs  state.rs
crates/tuitbot-mcp/src/contract/: envelope.rs  error.rs  mod.rs
crates/tuitbot-mcp/src/kernel/: engage.rs  mod.rs  read.rs  tests.rs
crates/tuitbot-mcp/src/spec/: mod.rs  (+4 more)
crates/tuitbot-server/: Cargo.toml  build.rs  dashboard-release-marker.txt
crates/tuitbot-server/src/: account.rs  auth.rs  dashboard.rs  error.rs  lib.rs  main.rs  state.rs  ws.rs
crates/tuitbot-server/tests/: api_tests.rs  assist_rag_tests.rs  compose_contract_tests.rs  draft_history_api_tests.rs  draft_studio_api_tests.rs  factory_reset.rs  fresh_install_auth.rs  graph_neighbor_tests.rs  onboarding_analysis.rs  onboarding_provisioning.rs  route_integration_tests.rs
crates/x-client-transaction/: .cargo_vcs_info.json  .gitignore  Cargo.toml  LICENSE.txt  README.md
crates/x-client-transaction/src/: cubic_curve.rs  error.rs  interpolate.rs  lib.rs  rotation.rs  transaction.rs  utils.rs
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/src/: lib.rs  main.rs
(+1656 files in other folders)
