[workspace]
members = ["crates/tuitbot-core", "crates/tuitbot-cli", "crates/tuitbot-mcp", "crates/tuitbot-server"]
exclude = ["dashboard/src-tauri", "crates/x-client-transaction"]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.12", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }

[workspace.lints.clippy]
pedantic = "warn"
