[package]
name = "replyguy-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Core library for ReplyGuy autonomous X growth assistant"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
tracing = "0.1"
oauth2 = "4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
async-trait = "0.1"
dirs = "5"
