[package]
name = "tuitbot-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "CLI for Tuitbot autonomous X growth assistant"

[[bin]]
name = "tuitbot"
path = "src/main.rs"

[dependencies]
tuitbot-core = { version = "0.1.0", path = "../tuitbot-core" }
tuitbot-mcp = { version = "0.1.0", path = "../tuitbot-mcp" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }
dirs = "5"
open = "5"
dialoguer = "0.11"
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
chrono-tz = "0.10"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
