[package]
name = "tuitbot-cli"
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
description = "CLI for Tuitbot autonomous X growth assistant"
license = "MIT"
repository = "https://github.com/aramirez087/TuitBot"
homepage = "https://github.com/aramirez087/TuitBot"
documentation = "https://docs.rs/tuitbot-cli"
keywords = ["x-api", "twitter", "automation", "cli", "bot"]

[[bin]]
name = "tuitbot"
path = "src/main.rs"

[dependencies]
tuitbot-core = { version = "0.1.4", path = "../tuitbot-core" }
tuitbot-mcp = { version = "0.1.4", path = "../tuitbot-mcp" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio"] }
dirs = "5"
open = "5"
dialoguer = "0.11"
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
chrono-tz = "0.10"
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
semver = "1"

[target.'cfg(target_os = "windows")'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
