[package]
name = "tuitbot-core"
version = "0.1.42"
edition = "2021"
rust-version = "1.75"
description = "Core library for Tuitbot autonomous X growth assistant"
license = "MIT"
repository = "https://github.com/aramirez087/TuitBot"
homepage = "https://github.com/aramirez087/TuitBot"
documentation = "https://docs.rs/tuitbot-core"
keywords = ["x-api", "twitter", "automation", "bot", "mcp"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { workspace = true, features = ["rustls-tls", "json", "multipart", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
tracing = "0.1"
oauth2 = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rand = "0.9"
async-trait = "0.1"
dirs = "6"
sha2 = "0.10"
base64 = "0.22"
open = "5"
tokio-util = "0.7.18"
regex = "1"
scraper = "0.26.0"
bcrypt = "0.19"
hex = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
serde_yaml = "0.9"
glob = "0.3"
aes-gcm = "0.10"
rquest = { version = "5", default-features = false, features = ["json"] }
rquest-util = "2"

[features]
test-helpers = []

[dev-dependencies]
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6"
tokio-test = "0.4"
criterion = { workspace = true }

[[bench]]
name = "core_operations"
harness = false
