[package]
name = "tuitbot-server"
version = "0.1.6"
edition = "2021"
rust-version = "1.75"
description = "HTTP API server for Tuitbot autonomous X growth assistant"
license = "MIT"
repository = "https://github.com/aramirez087/TuitBot"
homepage = "https://github.com/aramirez087/TuitBot"
documentation = "https://docs.rs/tuitbot-server"
keywords = ["x-api", "twitter", "api-server", "automation", "dashboard"]

[dependencies]
tuitbot-core = { version = "0.1.6", path = "../tuitbot-core" }
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tuitbot-core = { version = "0.1.6", path = "../tuitbot-core", features = ["test-helpers"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
