[package]
edition = "2021"
name = "x-client-transaction"
version = "0.1.0"
authors = ["Langkor <langkor@outlook.com>"]
description = "A Rust implementation of the X Client Transaction library"
license = "MIT"
repository = "https://github.com/langkor/x-client-transaction"

[lib]
name = "x_client_transaction"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
lazy_static = "1.5.0"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
scraper = "0.23.1"
sha2 = "0.10.9"
thiserror = "2.0.12"
url = "2.5.4"
