[package]
name = "tuitbot-dashboard"
version = "0.1.0"
description = "Tuitbot desktop dashboard — Tauri shell"
authors = ["aramirez087"]
license = "MIT"
repository = "https://github.com/aramirez087/TuitBot"
edition = "2021"
rust-version = "1.75"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2.0.0-rc.17" }
tauri-plugin-log = "2.0.0-rc"

# Embed the server as a library (replaces child-process spawning)
tuitbot-server = { path = "../../crates/tuitbot-server" }
tuitbot-core = { path = "../../crates/tuitbot-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"

# Tauri plugins
tauri-plugin-autostart = "2.0.0-rc"
tauri-plugin-notification = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
